# System7

./: .gitignore  BOOT_EMULATOR_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DECOMPILATION_PRIORITY.md  DRAG_AND_POSITIONING_ANALYSIS.md  FUTURE2_ARCHITECTURE_PLAN.md  FUTURE2_DEBUG_FINDINGS.md  FUTURE2_INVESTIGATION.md  FUTURE2_PHASE1_COMPLETE.md  INTERRUPT_SAFE_CONTEXT_SWITCHING.md  IRQ_CONTEXT_SWITCH_FINAL.md  LICENSE  Makefile  NANOKERNEL_MIGRATION.md  NANOKERNEL_THREADING.md  PHASE2_STATUS.md  PHASE6.3_AUTOMOUNT_SUMMARY.md  PHASE6.4_FS_DAEMONS_SUMMARY.md  PHASE6_VFS_INTEGRATION_SUMMARY.md  QEMU_BOOT_SOLUTION.md  README.ar.md  README.bg.md  README.bn.md  README.cs.md  README.da.md  README.de.md  README.el.md  README.es.md  README.et.md  README.fi.md  README.fr.md  README.hi.md  README.hr.md  README.hu.md  README.is.md  README.it.md  README.ja.md  README.ko.md  README.lt.md  (+32 more)
docs/: ARCHITECTURE.md  DIALOG_MANAGER_INTEGRATION.md  EVENT_MANAGER_INTEGRATION.md  FILE_MANAGER_INTEGRATION.md  FontSystem.md  INTEGRATION_STATUS_2025.md  MEMORY_CONTROL_PANEL_INTEGRATION.md  MEMORY_MANAGER_INTEGRATION.md  MENU_MANAGER_INTEGRATION.md  PRIORITY_ROADMAP.md  PROCESS_MANAGER_INTEGRATION_COMPLETE.md  ProcessManager_Integration.md  QUICKDRAW_INTEGRATION.md  RESOURCE_MANAGER_INTEGRATION.md  WINDOW_MANAGER_INTEGRATION.md
examples/: ADBExample.c  TrapDispatcherExample.c
include/: ADBManager.h  ATA_Driver.h  ExpandMem.h  FileManager.h  FileManagerTypes.h  FileManager_Internal.h  MacTypes.h  PS2Controller.h  QuickDraw.h  ResourceDecompression.h  (+7 more)
src/BootLoader/: CMakeLists.txt  Makefile  boot_sequence_manager.c  boot_test.c  boot_validation_test.c  modern_boot_sequence.c  modern_boot_test.c
src/BootLoader/hal/: boot_hal.c  boot_hal.h
src/BootLoader/storage/: modern_storage.h
src/Calculator/: CMakeLists.txt  Calculator_HAL.c  calculator.c
src/ColorManager/: CMakeLists.txt  ColorManager.c  ColorManagerCore.c  ColorManager_HAL.c  ColorMatching.c  ColorPicker.c  ColorSpaces.c  ColorTransforms.c  DeviceCalibration.c  DisplayCalibration.c  ICCProfiles.c
src/ControlManager/: CMakeLists.txt  ControlDrawing.c  ControlManagerCore.c  ControlManagerTest.c  ControlMgr_HAL.c  ControlResources.c  ControlTracking.c  PlatformControls.c  PopupControls.c  README.md  ScrollbarControls.c  StandardControls.c  TextControls.c  control_manager_sys7.c  control_trap_glue.c  string_conversion_stubs.c
src/ControlPanels/Memory/: CMakeLists.txt  memory_control_panel.c
src/DeskManager/: AlarmClock.c  AlarmClock_HAL.c  BuiltinDAs.c  CMakeLists.txt  Calculator.c  Chooser.c  DALoader.c  DAWindows.c  DeskManagerCore.c  KeyCaps.c  Makefile  Notepad.c  Notepad_HAL.c  README.md  SystemMenu.c
src/DialogManager/: AlertDialogs.c  CMakeLists.txt  DialogDrawing.c  DialogHelpers.c  DialogItems.c  DialogKeyboard.c  DialogManagerCore.c  DialogMgr_HAL.c  ModalDialogs.c  dialog_manager_core.c  dialog_manager_dispatch.c  dialog_manager_private.c
src/EventManager/: AppSwitcher.c  CMakeLists.txt  EventDispatcher.c  EventManagerCore.c  EventMgr_HAL.c  KeyboardEvents.c  ModernInput.c  MouseEvents.c  SystemEvents.c  event_manager.c
src/FileMgr/: CMakeLists.txt  FileMgr_HAL.c  btree_services.c  extent_manager.c  tfs_dispatch.c  volume_manager.c
src/Finder/: AboutThisMac.c  CMakeLists.txt  Find.c  Finder_HAL.c  GetInfo.c  Makefile  alias_manager.c  desktop_manager.c  finder_main.c  folder_window.c  trash_folder.c
src/Finder/Icon/: icon_draw.c  icon_label.c  icon_resources.c
src/HelpManager/: CMakeLists.txt  HelpBalloons.c  HelpManager.c  HelpManagerCore.c  HelpManager_HAL.c
src/ListManager/: CMakeLists.txt  ListManager.c  ListMgr_HAL.c  list_manager.c
src/MemoryMgr/: CMakeLists.txt  MemoryInitialization.c  MemoryManager.c  MemoryMgr_HAL.c  MemoryTelemetry.c  blockmove_optimization.c  heap_compaction.c  memory_manager_core.c
src/MenuManager/: CMakeLists.txt  MenuBarManager.c  MenuBitsPool.c  MenuDisplay.c  MenuItems.c  MenuManagerCore.c  MenuMgr_HAL.c  MenuResources.c  MenuSelection.c  MenuTitleTracking.c  MenuTrack.c  PopupMenus.c  menu_dispatch.c  menu_geometry.c  menu_savebits.c  menu_stubs.c
src/PackageManager/: CMakeLists.txt  DateTimeFormatting.c  InternationalUtilities.c  ListManagerPackage.c  PackageDispatch.c  PackageManager.c  PackageManagerCore.c  PackageManager_HAL.c  README.md  SANEPackage.c  StandardFilePackage.c  StringPackage.c  StringUtilities.c
src/PrintManager/: CMakeLists.txt  Makefile  PageLayout.c  PrintDialogs.c  PrintDocument.c  PrintDrivers.c  PrintManager.c  PrintManagerCore.c  PrintManager_HAL.c  README.md
src/ProcessMgr/: CMakeLists.txt  CooperativeScheduler.c  EventIntegration.c  ProcessManager.c  ProcessMgr_HAL.c
src/QuickDraw/: Bitmaps.c  CMakeLists.txt  ColorQuickDraw.c  Coordinates.c  CursorManager.c  GWorld.c  PatternManager.c  Patterns.c  QuickDrawCore.c  QuickDrawPlatform.c  QuickDrawPlatform.h  QuickDraw_HAL.c  README.md  Regions.c  Text.c  quickdraw_bitmap.c  quickdraw_core.c  quickdraw_drawing.c  quickdraw_pictures.c  quickdraw_portable.c  quickdraw_shapes.c
src/ResourceMgr/: CMakeLists.txt  ResourceMgr.c  ResourceMgr_HAL.c  StringResources.c  resource_manager.c  resource_traps.c
src/ScrapManager/: CMakeLists.txt  InterAppScrap.c  ModernClipboard.c  ScrapConversion.c  ScrapFile.c  ScrapFormats.c  ScrapManager.c  ScrapManagerCore.c  ScrapMemory.c  ScrapMgr_HAL.c  ScrapOperations.c  scrap_manager.c
src/SoundManager/: CMakeLists.txt  DMA_Controller.c  Makefile  SoundHardware.c  SoundInput.c  SoundMIDI.c  SoundManagerBareMetal.c  SoundManagerCore.c  SoundMgr_HAL.c  SoundMixing.c  SoundResources.c  SoundSynthesis.c
src/TextEdit/: CMakeLists.txt  TextBreak.c  TextClipboard.c  TextDisplay.c  TextEdit.c  TextEditClipboard.c  TextEditCore.c  TextEditDraw.c  TextEditTest.c  TextEdit_HAL.c  TextFormatting.c  TextInput.c  TextSelection.c  TextUndo.c  textedit_core.c
src/WindowManager/: CMakeLists.txt  WindowDisplay.c  WindowDragging.c  WindowEvents.c  WindowLayering.c  WindowManagerCore.c  WindowManagerInternal.h  WindowMgr_HAL.c  WindowParts.c  WindowResizing.c  window_manager.c
(+775 files in other folders)
